# patent_go

./: README.md  go.mod  go.sum
patent_client/: main.go
patent_server/: main.go
protobuf/: patent.pb.go  patent.proto  patent_grpc.pb.go
stenp/: CMakeLists.txt  call_life.cpp  call_life_back20240318.cpp
